--- a/BlocdeNotas/Views/AboutPage.xaml
+++ b/BlocdeNotas/Views/AboutPage.xaml
@@ -3,20 +3,34 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:BlocdeNotas.Models"
              x:Class="BlocdeNotas.Views.AboutPage">
+
     <ContentPage.BindingContext>
         <models:About />
     </ContentPage.BindingContext>
-    <VerticalStackLayout Spacing="10" Margin="10">
-        <HorizontalStackLayout Spacing="10">
-            <Image Source="dotnet_bot.png"
-                   SemanticProperties.Description="The dot net bot waving hello!"
-                   HeightRequest="64" />
-            <Label FontSize="22" FontAttributes="Bold" Text="{Binding Title}" VerticalOptions="End" />
-            <Label FontSize="22" Text="{Binding Version}" VerticalOptions="End" />
-        </HorizontalStackLayout>
 
-        <Label Text="{Binding Message}" />
+    <VerticalStackLayout Spacing="20" Margin="10">
+
+        <!-- Imagen -->
+        <Image Source="{Binding ImagePath}"
+               SemanticProperties.Description="Imagen de desarrollador"
+               HeightRequest="150" WidthRequest="150"
+               HorizontalOptions="Center" />
+
+        <!-- Nombre -->
+        <Label Text="{Binding Title}"
+               FontSize="24"
+               FontAttributes="Bold"
+               HorizontalOptions="Center" />
+
+        <!-- Descripción -->
+        <Label Text="{Binding Description}"
+               FontSize="16"
+               HorizontalOptions="Center"
+               Margin="10" />
+
+        <!-- Botón (opcional) -->
         <Button Text="Learn more..." Clicked="LearnMore_Clicked" />
+
     </VerticalStackLayout>
 
 </ContentPage>
